tests/traci/get_variable/MeMeDetector/errors/UnknownAD/testclient_out.traci
TraCITestClient output file. Date: Fri Apr  7 07:39:40 2017


-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <GetVariable>:
  domID=161 varID=16 objID=xxx
.. Answered with error to command (161), [description: Multi entry exit detector 'xxx' is not known]

-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: ]
